--- a/assets/css/index.old.css
+++ b/assets/css/index.old.css
@@ -173,10 +173,17 @@ body {
   }
 
   #svg-container>svg a.notangka {
+    /* Firefox */
+    -moz-transition: fill 1.5s ease, filter 1.5s ease, transform 1.5s ease,
+      stroke 1.5s ease, stroke-width 1.5s ease, stroke-opacity 1.5s ease;
+    -moz-transform: scale(1);
+    -moz-transform-origin: center;
+    -moz-transform-box: fill-box;
+    /*---------*/
     transition: fill 1.5s ease, filter 1.5s ease, transform 1.5s ease,
       stroke 1.5s ease, stroke-width 1.5s ease, stroke-opacity 1.5s ease;
     transform: scale(1);
-    transform-box: border-box;
+    transform-box: fill-box;
     transform-origin: center;
     stroke-width: 0;
     stroke-opacity: 0;
@@ -184,11 +191,20 @@ body {
   }
 
   #svg-container>svg a.notangka.active {
+    /* Firefox */
+    -moz-transition: fill 0.15s linear, filter 0.15s linear, transform 0.15s linear,
+      stroke 0.15s linear, stroke-width 0.15s linear,
+      stroke-opacity 0.15s linear;
+    -moz-transform: scale(1.25);
+    -moz-transform-box: fill-box;
+    -moz-transform-origin: center;
+    -moz-animation: none;
+    /*---------*/
     transition: fill 0.15s linear, filter 0.15s linear, transform 0.15s linear,
       stroke 0.15s linear, stroke-width 0.15s linear,
       stroke-opacity 0.15s linear;
-    transform: scale(1.3);
-    transform-box: border-box;
+    transform: scale(1.25);
+    transform-box: fill-box;
     transform-origin: center;
     stroke-width: 0.125;
     stroke-opacity: 0.667;
