--- a/_layouts/hyplayer.html
+++ b/_layouts/hyplayer.html
@@ -98,7 +98,7 @@ nav_enabled: false
         <script>
           window.moduleConfig = { lagu: "{{ page.workId }}" }
         </script>
-        <script type="module" src="{{ site.url }}{{ site.baseurl }}/assets/js/hyplayer.js"></script>
+        <script type="module" src="../assets/js/hyplayer.js"></script>
         {% include components/footer.html %}
       </div>
     </div>
