CSS href bug fix.

--- a/_includes/hyplayer/hyplayer_head.html
+++ b/_includes/hyplayer/hyplayer_head.html
@@ -43,6 +43,6 @@
     {% include head_custom.html %}
     <title id="page-title">HY Player</title>
     <!-- <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/normalize.css"> -->
-    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/hyplayer.css">
+    <link rel="stylesheet" href="../assets/css/hyplayer.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
 </head>
