--- a/_layouts/hyplayer_frontpage.html
+++ b/_layouts/hyplayer_frontpage.html
@@ -18,7 +18,7 @@ layout: table_wrappers
   {% endif %}
   <div class="main" id="top">
     {% include components/hyplayer_header.html %}
-    <div class="main-content-wrap">
+    <div class="main-content-wrap" style="padding: 1rem !important;">
       {%- comment -%}
         {% include components/breadcrumbs.html %}
       {%- endcomment -%}
