--- a/_includes/components/hyplayer_header.html
+++ b/_includes/components/hyplayer_header.html
@@ -2,7 +2,7 @@
   {% if site.search_enabled != false %}
     {% include components/search_header.html %}
   {% else %}
-    <div class="search">{% include components/hyplayer_breadcrumbs.html %}</div>
+    <div class="search" style="margin-left: 1.25rem;">{% include components/hyplayer_breadcrumbs.html %}</div>
   {% endif %}
   {% include header_custom.html %}
   {% if site.aux_links %}
