FIxing position of loader.

--- a/_layouts/hyplayer.html
+++ b/_layouts/hyplayer.html
@@ -57,7 +57,7 @@ nav_enabled: true
         <div class="main-content" style="position: relative;">
           <!-- Bootstrap loading animation -->
           <div id="loading"
-            style="position: fixed; top: var(--header-height); left: 0; right: 0; bottom: 0; z-index: 1000; background-color: white; margin: 0; padding: 0;"
+            style="position: relative; top: var(--header-height); left: 0; right: 0; bottom: 0; z-index: 1000; background-color: white; margin: 0; padding: 0;"
             class="d-flex align-items-center justify-content-center">
             <div class="text-center">
               <div class="spinner-border text-primary mb-3"
