--- a/_includes/components/hyplayer_children_nav.html
+++ b/_includes/components/hyplayer_children_nav.html
@@ -83,6 +83,11 @@
   {% for nav_child in nav_children %}
   <li>
     <a href="{{ nav_child.url | relative_url }}" style="font-weight: bold;">{{ nav_child.title }}</a>
+    {%- if nav_child.notationType -%}
+      <span class="label" style="vertical-align: bottom !important; margin-right: 0 !important; background-color: lightgoldenrodyellow; color: black; border-color: gray; border-width: 0.5px !important; border-style: solid;">
+        {{ nav_child.notationType }}
+      </span>
+    {%- endif -%}
     {%- if nav_child.work_type -%}
       {% if nav_child.work_type contains 'Salinan' %}
         {%- assign label_class = 'label label-yellow' -%}
@@ -91,7 +96,7 @@
       {% elsif nav_child.work_type contains 'Komposisi' %}
         {%- assign label_class = 'label label-purple' -%}
       {% endif %}
-      <span class="{{ label_class }}" style="vertical-align: bottom !important;">{{ nav_child.work_type }}</span>
+      <span class="{{ label_class }}" style="vertical-align: bottom !important; font-weight: bold; border-color: rgb(90, 90, 90); border-width: 0.5px !important; border-style: solid;">{{ nav_child.work_type }}</span>
     {%- endif -%}<br>
     <blockquote style="line-height: 1.3 !important;">
       {%- if nav_child.composer_and_arranger_and_lyricist -%}
