--- a/_layouts/hyplayer.html
+++ b/_layouts/hyplayer.html
@@ -9,6 +9,10 @@ nav_enabled: true
 {% include hyplayer/hyplayer_head.html %}
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KJ29ZBCR"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <a class="skip-to-main" href="#main-content">Skip to main content</a>
   {% include icons/icons.html %}
   {% if page.nav_enabled == true %}
